# pkmn

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  script.js  version.txt
.github/workflows/: gh-pages.yml
core/: Cargo.toml
core/benches/: lib_bench.rs
core/data/: README.md  bulba_evo_chains.csv  geni_evo_chains.txt  geni_learnsets.json  genii_evo_chains.txt  genii_learnsets.json  smogon_gs_items.csv  smogon_gs_moves.csv  smogon_gs_pokemon.csv  smogon_rb_items.csv  smogon_rb_moves.csv  smogon_rb_pokemon.csv
core/examples/: locate_gsc_screen.rs  locate_screen.rs  screenshot.rs  vis.rs
core/examples/desktop/: main.rs
core/scripts/: create_evo_chains.py  debug_vis.py  evo_chains.py  plotly_demo.py  requirements.txt  scrape_bulba_images.py  scrape_bulba_learnsets.py  scrape_bulba_screenshots.py  scrape_smogon.py  scrape_smogon_rb.py  verify_itemdex.py
core/src/: char.rs  evos.rs  fmt.rs  gameboy.rs  items.rs  learnset.rs  lib.rs  moves.rs  ocr.rs  pokemon.rs  position.rs  roi.rs  stats.rs  utils.rs
data/: base_stats.csv
examples/: desktop.rs
examples/desktop/: main.rs
net/: Cargo.toml  LICENSE_MIT  guide_draft.md  index.html  index.js  index.md  script.js  styles.css  video.html
net/min/: index.html  index.js  styles.css
net/scripts/: copy_images_to_static_dir.py  create_index_html.py  index.md  index_frame.html  version.py
net/src/: lib.rs
net/static/: index.html  styles.css
net/v1/: index.js
pokemon_dv_calculator/: Cargo.toml
src/: gameboy.rs  lib.rs  main.rs  ocr.rs  pkmn_stats.rs  screen_capturer.rs  stats.rs
(+26 files in other folders)
