[package]
name = "pokemon_dv_calculator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scrap = "0.5.0" # For capturing screen
show-image = { version = "0.13.1", features = ["image"] } # Quickly show images
image = "0.24.6"
imageproc = "0.23.0"
csv = "1.2.2"  #
serde = { version = "1.0.164", features = ["derive"] } # To convert CSV lines to record struct
crossterm = "0.26.1" # TUI - terminal user interface
